third_party/flutter_litert/src/tensorflow_lite/operator.h

/// TfLiteOperator is an opaque version of TfLiteRegistration,
/// and is used for registering custom ops.  It represents a definition of a
/// custom op or a builtin op.
///
/// \warning This is an experimental type and subject to change.
typedef struct TfLiteOperator TfLiteOperator;
/// Sets the deallocation callback for the registration.
///
/// This callback is called to deallocate the data returned by the init
/// callback. The value passed in the `data` parameter is the value that was
/// returned by the `init` callback. Please refer `free` of `TfLiteRegistration`
/// for the detail.
///
/// Deprecated: Use `TfLiteOperatorSetFreeWithData`
TFL_CAPI_EXPORT extern void TfLiteOperatorSetFree(
    TfLiteOperator* registration,
    void (*free)(TfLiteOpaqueContext* context, void* data));
/// Sets the deallocation callback for the registration, similarly to
/// `TfLiteOperatorSetFree`. The function returns an error upon failure.
///
/// This callback is called to deallocate the data returned by the init
/// callback. The value passed in the `data` parameter is the value that was
/// returned by the `init` callback. The value passed in the `user_data`
/// parameter is the value that was passed to `TfLiteOperatorCreate`.
/// Please refer `free` of `TfLiteRegistration` for the detail.
///
TFL_CAPI_EXPORT extern TfLiteStatus TfLiteOperatorSetFreeWithData(
    TfLiteOperator* registration,
    void (*free)(void* user_data, TfLiteOpaqueContext* context, void* data));
/// Sets the invocation callback for the registration.
///
/// The callback is called when the operator is executed.
/// Please refer `invoke` of `TfLiteRegistration` for the detail.
///
/// Deprecated: Use `TfLiteOperatorSetInvokeWithData`
TFL_CAPI_EXPORT extern void TfLiteOperatorSetInvoke(
    TfLiteOperator* registration,
    TfLiteStatus (*invoke)(TfLiteOpaqueContext* context,
                           TfLiteOpaqueNode* node));
/// Sets the invocation callback for the registration. The function returns an
/// error upon failure.
///
/// The callback is called when the operator is executed.  The value passed in
/// the `user_data` parameter is the value that was passed to
/// `TfLiteOperatorCreate`.  Please refer `invoke` of `TfLiteRegistration` for
/// the detail.
///
TFL_CAPI_EXPORT extern TfLiteStatus TfLiteOperatorSetInvokeWithData(
    TfLiteOperator* registration,
    TfLiteStatus (*invoke)(void* user_data, TfLiteOpaqueContext* context,
                           TfLiteOpaqueNode* node));