third_party/flutter_litert/lib/src/bindings/tensorflow_lite_bindings_generated.dart


  late final _TfLiteInterpreterOptionsCopyPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<TfLiteInterpreterOptions> Function(
            ffi.Pointer<TfLiteInterpreterOptions>,
          )
        >
      >('TfLiteInterpreterOptionsCopy');
  late final _TfLiteInterpreterOptionsCopy =
      _TfLiteInterpreterOptionsCopyPtr.asFunction<
        ffi.Pointer<TfLiteInterpreterOptions> Function(
          ffi.Pointer<TfLiteInterpreterOptions>,
        )
      >();

  /// Destroys the interpreter options instance.
  ///
  /// If `options` is a null pointer, this function has no effect.
  void TfLiteInterpreterOptionsDelete(
    ffi.Pointer<TfLiteInterpreterOptions> options,
  ) {
    return _TfLiteInterpreterOptionsDelete(options);
  }

  late final _TfLiteInterpreterOptionsDeletePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<TfLiteInterpreterOptions>)
        >
      >('TfLiteInterpreterOptionsDelete');
  late final _TfLiteInterpreterOptionsDelete =
      _TfLiteInterpreterOptionsDeletePtr.asFunction<
        void Function(ffi.Pointer<TfLiteInterpreterOptions>)
      >();

  /// Sets the number of CPU threads to use for the interpreter.
  void TfLiteInterpreterOptionsSetNumThreads(
    ffi.Pointer<TfLiteInterpreterOptions> options,
    int num_threads,
  ) {
    return _TfLiteInterpreterOptionsSetNumThreads(options, num_threads);
  }

  late final _TfLiteInterpreterOptionsSetNumThreadsPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<TfLiteInterpreterOptions>, ffi.Int32)
        >
      >('TfLiteInterpreterOptionsSetNumThreads');
  late final _TfLiteInterpreterOptionsSetNumThreads =
      _TfLiteInterpreterOptionsSetNumThreadsPtr.asFunction<
        void Function(ffi.Pointer<TfLiteInterpreterOptions>, int)
      >();

  /// Adds a delegate to be applied during `TfLiteInterpreter` creation.
  ///
  /// If delegate application fails, interpreter creation will also fail with an
  /// associated error logged.
  ///
  /// \note The caller retains ownership of the delegate and should ensure that it
  /// remains valid for the duration of any created interpreter's lifetime.
  ///
  /// If you are NOT using "TensorFlow Lite in Play Services", and NOT building
  /// with `TFLITE_WITH_STABLE_ABI` or `TFLITE_USE_OPAQUE_DELEGATE` macros
  /// enabled, it is possible to pass a `TfLiteDelegate*` rather than a
  /// `TfLiteOpaqueDelegate*` to this function, since in those cases,
  /// `TfLiteOpaqueDelegate` is just a typedef alias for `TfLiteDelegate`.
  /// This is for compatibility with existing source code
  /// and existing delegates.  For new delegates, it is recommended to
  /// use `TfLiteOpaqueDelegate` rather than `TfLiteDelegate`.  (See
  /// `TfLiteOpaqueDelegate` in tensorflow/lite/core/c/c_api_types.h.)
  void TfLiteInterpreterOptionsAddDelegate(
    ffi.Pointer<TfLiteInterpreterOptions> options,
    ffi.Pointer<TfLiteOpaqueDelegate> delegate,
  ) {
    return _TfLiteInterpreterOptionsAddDelegate(options, delegate);
  }

  late final _TfLiteInterpreterOptionsAddDelegatePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<TfLiteInterpreterOptions>,
            ffi.Pointer<TfLiteOpaqueDelegate>,
          )
        >
      >('TfLiteInterpreterOptionsAddDelegate');
  late final _TfLiteInterpreterOptionsAddDelegate =
      _TfLiteInterpreterOptionsAddDelegatePtr.asFunction<
        void Function(
          ffi.Pointer<TfLiteInterpreterOptions>,
          ffi.Pointer<TfLiteOpaqueDelegate>,
        )
      >();

  /// Sets a custom error reporter for interpreter execution.
  ///
  /// * `reporter` takes the provided `user_data` object, as well as a C-style
  /// format string and arg list (see also vprintf).
  /// * `user_data` is optional. If non-null, it is owned by the client and must
  /// remain valid for the duration of the interpreter lifetime.
  void TfLiteInterpreterOptionsSetErrorReporter(
    ffi.Pointer<TfLiteInterpreterOptions> options,
    ffi.Pointer<
      ffi.NativeFunction<
        ffi.Void Function(
          ffi.Pointer<ffi.Void> user_data,
          ffi.Pointer<ffi.Char> format,
          va_list args,
        )
      >
    >
    reporter,
    ffi.Pointer<ffi.Void> user_data,
  ) {
    return _TfLiteInterpreterOptionsSetErrorReporter(
      options,
      reporter,
      user_data,
    );
  }

  late final _TfLiteInterpreterOptionsSetErrorReporterPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<TfLiteInterpreterOptions>,
            ffi.Pointer<
              ffi.NativeFunction<
                ffi.Void Function(
                  ffi.Pointer<ffi.Void> user_data,
                  ffi.Pointer<ffi.Char> format,
                  va_list args,
                )
              >
            >,
            ffi.Pointer<ffi.Void>,
          )
        >
      >('TfLiteInterpreterOptionsSetErrorReporter');
  late final _TfLiteInterpreterOptionsSetErrorReporter =
      _TfLiteInterpreterOptionsSetErrorReporterPtr.asFunction<
        void Function(
          ffi.Pointer<TfLiteInterpreterOptions>,
          ffi.Pointer<
            ffi.NativeFunction<
              ffi.Void Function(
                ffi.Pointer<ffi.Void> user_data,
                ffi.Pointer<ffi.Char> format,
                va_list args,
              )
            >
          >,
          ffi.Pointer<ffi.Void>,
        )
      >();

  /// Adds an op registration to be applied during `TfLiteInterpreter` creation.
  ///
  /// The `TfLiteOperator` object is needed to implement custom op of
  /// TFLite Interpreter via C API. Calling this function ensures that any
  /// `TfLiteInterpreter` created with the specified `options` can execute models
  /// that use the custom operator specified in `registration`.
  /// Please refer https://www.tensorflow.org/lite/guide/ops_custom for custom op
  /// support.
  /// \note The caller retains ownership of the TfLiteOperator object
  /// and should ensure that it remains valid for the duration of any created
  /// interpreter's lifetime.
  /// \warning This is an experimental API and subject to change.
  void TfLiteInterpreterOptionsAddOperator(
    ffi.Pointer<TfLiteInterpreterOptions> options,
    ffi.Pointer<TfLiteOperator> registration,
  ) {
    return _TfLiteInterpreterOptionsAddOperator(options, registration);
  }

  late final _TfLiteInterpreterOptionsAddOperatorPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<TfLiteInterpreterOptions>,
            ffi.Pointer<TfLiteOperator>,
          )
        >
      >('TfLiteInterpreterOptionsAddOperator');
  late final _TfLiteInterpreterOptionsAddOperator =
      _TfLiteInterpreterOptionsAddOperatorPtr.asFunction<
        void Function(
          ffi.Pointer<TfLiteInterpreterOptions>,
          ffi.Pointer<TfLiteOperator>,
        )
      >();

  /// Enables users to cancel in-flight invocations with
  /// `TfLiteInterpreterCancel`.
  ///
  /// By default it is disabled and calling to `TfLiteInterpreterCancel` will
  /// return kTfLiteError. See `TfLiteInterpreterCancel`.
  int TfLiteInterpreterOptionsEnableCancellation(
    ffi.Pointer<TfLiteInterpreterOptions> options,
    bool enable,
  ) {
    return _TfLiteInterpreterOptionsEnableCancellation(options, enable);
  }

  late final _TfLiteInterpreterOptionsEnableCancellationPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<TfLiteInterpreterOptions>, ffi.Bool)
        >
      >('TfLiteInterpreterOptionsEnableCancellation');
  late final _TfLiteInterpreterOptionsEnableCancellation =
      _TfLiteInterpreterOptionsEnableCancellationPtr.asFunction<
        int Function(ffi.Pointer<TfLiteInterpreterOptions>, bool)
      >();

  /// Returns a new interpreter using the provided model and options, or null on
  /// failure.
  ///
  /// * `model` must be a valid model instance. The caller retains ownership of
  /// the object, and may destroy it (via TfLiteModelDelete) immediately after
  /// creating the interpreter.  However, if the TfLiteModel was allocated with
  /// TfLiteModelCreate, then the `model_data` buffer that was passed to
  /// TfLiteModelCreate must outlive the lifetime of the TfLiteInterpreter
  /// object that this function returns, and must not be modified during that
  /// time; and if the TfLiteModel was allocated with TfLiteModelCreateFromFile,
  /// then the contents of the model file must not be modified during the
  /// lifetime of the TfLiteInterpreter object that this function returns.
  /// * `optional_options` may be null. The caller retains ownership of the
  /// object, and can safely destroy it (via TfLiteInterpreterOptionsDelete)
  /// immediately after creating the interpreter.
  ///
  /// \note The client *must* explicitly allocate tensors before attempting to
  /// access input tensor data or invoke the interpreter.
  ffi.Pointer<TfLiteInterpreter> TfLiteInterpreterCreate(
    ffi.Pointer<TfLiteModel> model,
    ffi.Pointer<TfLiteInterpreterOptions> optional_options,
  ) {
    return _TfLiteInterpreterCreate(model, optional_options);
  }

  late final _TfLiteInterpreterCreatePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<TfLiteInterpreter> Function(
            ffi.Pointer<TfLiteModel>,
            ffi.Pointer<TfLiteInterpreterOptions>,
          )
        >
      >('TfLiteInterpreterCreate');
  late final _TfLiteInterpreterCreate =
      _TfLiteInterpreterCreatePtr.asFunction<
        ffi.Pointer<TfLiteInterpreter> Function(
          ffi.Pointer<TfLiteModel>,
          ffi.Pointer<TfLiteInterpreterOptions>,
        )
      >();

  /// Destroys the interpreter.
  ///
  /// If `interpreter` is a null pointer, this function has no effect.
  void TfLiteInterpreterDelete(ffi.Pointer<TfLiteInterpreter> interpreter) {
    return _TfLiteInterpreterDelete(interpreter);
  }

  late final _TfLiteInterpreterDeletePtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Pointer<TfLiteInterpreter>)>
      >('TfLiteInterpreterDelete');
  late final _TfLiteInterpreterDelete =
      _TfLiteInterpreterDeletePtr.asFunction<
        void Function(ffi.Pointer<TfLiteInterpreter>)
      >();

  /// Returns the number of input tensors associated with the model.
  int TfLiteInterpreterGetInputTensorCount(
    ffi.Pointer<TfLiteInterpreter> interpreter,
  ) {
    return _TfLiteInterpreterGetInputTensorCount(interpreter);
  }

  late final _TfLiteInterpreterGetInputTensorCountPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<TfLiteInterpreter>)>
      >('TfLiteInterpreterGetInputTensorCount');
  late final _TfLiteInterpreterGetInputTensorCount =
      _TfLiteInterpreterGetInputTensorCountPtr.asFunction<
        int Function(ffi.Pointer<TfLiteInterpreter>)
      >();

  /// Returns a pointer to an array of input tensor indices.  The length of the
  /// array can be obtained via a call to `TfLiteInterpreterGetInputTensorCount`.
  ///
  /// Typically the input tensors associated with an `interpreter` would be set
  /// during the initialization of the `interpreter`, through a mechanism like the
  /// `InterpreterBuilder`, and remain unchanged throughout the lifetime of the
  /// interpreter.  However, there are some circumstances in which the pointer may
  /// not remain valid throughout the lifetime of the interpreter, because calls
  /// to `SetInputs` on the interpreter invalidate the returned pointer.
  ///
  /// The ownership of the array remains with the TFLite runtime.
  ffi.Pointer<ffi.Int> TfLiteInterpreterInputTensorIndices(
    ffi.Pointer<TfLiteInterpreter> interpreter,
  ) {
    return _TfLiteInterpreterInputTensorIndices(interpreter);
  }
